--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "eleventy --serve",
+    "build": "eleventy"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +13,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2"
   },
-  "scripts": {
-    "start": "eleventy --serve",
-    "build": "eleventy"
+  "dependencies": {
+    "@11ty/eleventy-plugin-rss": "^2.0.4"
   }
 }
